{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 59,
  "lineage": "a45abf0a-5494-1bbb-22d3-8533a87e29e5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03dfa996bd12caa67",
            "arn": "arn:aws:ec2:us-east-1:010438509155:elastic-ip/eipalloc-03dfa996bd12caa67",
            "domain": "vpc",
            "id": "eipalloc-03dfa996bd12caa67",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-239-89-29.compute-1.amazonaws.com",
            "public_ip": "34.239.89.29",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c0e4c80754a64cce",
            "arn": "arn:aws:ec2:us-east-1:010438509155:elastic-ip/eipalloc-0c0e4c80754a64cce",
            "domain": "vpc",
            "id": "eipalloc-0c0e4c80754a64cce",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-23-22-105-88.compute-1.amazonaws.com",
            "public_ip": "23.22.105.88",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app-server1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a0e5d9c7acc336f1",
            "arn": "arn:aws:ec2:us-east-1:010438509155:instance/i-08cb74c36e4185ad5",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08cb74c36e4185ad5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my_key",
            "launch_template": [
              {
                "id": "lt-011c20a08ef1a910b",
                "name": "instance-launch",
                "version": "$Latest"
              }
            ],
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0aa6750a2dd1ced6c",
            "private_dns": "ip-10-0-3-53.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.53",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-099f4ddcc19a89d7c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08b32f8ebcf129b25",
            "tags": {
              "Name": "app-server1"
            },
            "tags_all": {
              "Name": "app-server1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-046988f290de6b9d9"
            ]
          },
          "dependencies": [
            "aws_key_pair.my_key",
            "aws_launch_template.appserver1",
            "aws_security_group.main_sg",
            "aws_subnet.private_subnet1",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app-server2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a0e5d9c7acc336f1",
            "arn": "arn:aws:ec2:us-east-1:010438509155:instance/i-0fbb6b7c33b918994",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fbb6b7c33b918994",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my_key",
            "launch_template": [
              {
                "id": "lt-011c20a08ef1a910b",
                "name": "instance-launch",
                "version": "$Latest"
              }
            ],
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06212d043c08b675f",
            "private_dns": "ip-10-0-4-64.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.64",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-000db17e837632ca7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c78084b54123c961",
            "tags": {
              "Name": "app-server2"
            },
            "tags_all": {
              "Name": "app-server2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-046988f290de6b9d9"
            ]
          },
          "dependencies": [
            "aws_key_pair.my_key",
            "aws_launch_template.appserver1",
            "aws_security_group.main_sg",
            "aws_subnet.private_subnet2",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_vpc-aws_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010438509155:internet-gateway/igw-09c7b43123acc1077",
            "id": "igw-09c7b43123acc1077",
            "owner_id": "010438509155",
            "tags": {
              "Name": "main_vpc-aws_internet_gateway"
            },
            "tags_all": {
              "Name": "main_vpc-aws_internet_gateway"
            },
            "vpc_id": "vpc-05f511cbf2fc448cb"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "first_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:010438509155:loadbalancer/app/first-lb/81276c17332bad55",
            "arn_suffix": "app/first-lb/81276c17332bad55",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "first-lb-1253660319.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:010438509155:loadbalancer/app/first-lb/81276c17332bad55",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "first-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-046988f290de6b9d9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0d6602b6bde65d33f"
              },
              {
                "subnet_id": "subnet-0fc060d22b92b30a5"
              }
            ],
            "subnets": [
              "subnet-0d6602b6bde65d33f",
              "subnet-0fc060d22b92b30a5"
            ],
            "tags": {
              "Name": "web"
            },
            "tags_all": {
              "Name": "web"
            },
            "vpc_id": "vpc-05f511cbf2fc448cb",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.main_sg",
            "aws_subnet.public_subnet1",
            "aws_subnet.public_subnet2",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:010438509155:listener/app/first-lb/81276c17332bad55/9bb4792d743bede6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:010438509155:targetgroup/FirstTg/4c8ed0bd68ecc09e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:010438509155:listener/app/first-lb/81276c17332bad55/9bb4792d743bede6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:010438509155:loadbalancer/app/first-lb/81276c17332bad55",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.first_lb",
            "aws_lb_target_group.tg",
            "aws_security_group.main_sg",
            "aws_subnet.public_subnet1",
            "aws_subnet.public_subnet2",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:010438509155:targetgroup/FirstTg/4c8ed0bd68ecc09e",
            "arn_suffix": "targetgroup/FirstTg/4c8ed0bd68ecc09e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:010438509155:targetgroup/FirstTg/4c8ed0bd68ecc09e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "FirstTg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05f511cbf2fc448cb"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:010438509155:targetgroup/FirstTg/4c8ed0bd68ecc09e-2024083105463553500000000f",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:010438509155:targetgroup/FirstTg/4c8ed0bd68ecc09e",
            "target_id": "i-08cb74c36e4185ad5"
          },
          "dependencies": [
            "aws_instance.app-server1",
            "aws_key_pair.my_key",
            "aws_launch_template.appserver1",
            "aws_lb_target_group.tg",
            "aws_security_group.main_sg",
            "aws_subnet.private_subnet1",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:010438509155:targetgroup/FirstTg/4c8ed0bd68ecc09e-2024083105462580310000000e",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:010438509155:targetgroup/FirstTg/4c8ed0bd68ecc09e",
            "target_id": "i-0fbb6b7c33b918994"
          },
          "dependencies": [
            "aws_instance.app-server2",
            "aws_key_pair.my_key",
            "aws_launch_template.appserver1",
            "aws_lb_target_group.tg",
            "aws_security_group.main_sg",
            "aws_subnet.private_subnet2",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03dfa996bd12caa67",
            "association_id": "eipassoc-0c1651226af3e83ac",
            "connectivity_type": "public",
            "id": "nat-06c48ced922b84415",
            "network_interface_id": "eni-0d5358590670d9e39",
            "private_ip": "10.0.1.156",
            "public_ip": "34.239.89.29",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0fc060d22b92b30a5",
            "tags": {
              "Name": "nat1"
            },
            "tags_all": {
              "Name": "nat1"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.main_vpc-aws_internet_gateway",
            "aws_subnet.public_subnet1",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c0e4c80754a64cce",
            "association_id": "eipassoc-0fdd5d53a8279b565",
            "connectivity_type": "public",
            "id": "nat-0228ac44355d84112",
            "network_interface_id": "eni-0d85dcdb53c456c1d",
            "private_ip": "10.0.2.38",
            "public_ip": "23.22.105.88",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d6602b6bde65d33f",
            "tags": {
              "Name": "nat2"
            },
            "tags_all": {
              "Name": "nat2"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip2",
            "aws_internet_gateway.main_vpc-aws_internet_gateway",
            "aws_subnet.public_subnet2",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010438509155:network-acl/acl-08fdf60003e605ee1",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 204,
                "to_port": 0
              }
            ],
            "id": "acl-08fdf60003e605ee1",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 101,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 102,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "010438509155",
            "subnet_ids": [],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-05f511cbf2fc448cb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "Private_route1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0cb1dc9205c47cfc11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06c48ced922b84415",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cb1dc9205c47cfc1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.main_vpc-aws_internet_gateway",
            "aws_nat_gateway.nat_gateway1",
            "aws_route_table.private_subnet",
            "aws_subnet.public_subnet1",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "Private_route2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-073155b038b80bb0e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0228ac44355d84112",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-073155b038b80bb0e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip2",
            "aws_internet_gateway.main_vpc-aws_internet_gateway",
            "aws_nat_gateway.nat_gateway_2",
            "aws_route_table.private_subnet2",
            "aws_subnet.public_subnet2",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09c7b43123acc1077",
            "id": "r-rtb-014e0b311da280a2c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-014e0b311da280a2c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main_vpc-aws_internet_gateway",
            "aws_route_table.main",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "main2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09c7b43123acc1077",
            "id": "r-rtb-059d5d445a9242d0f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-059d5d445a9242d0f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main_vpc-aws_internet_gateway",
            "aws_route_table.main2",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010438509155:route-table/rtb-014e0b311da280a2c",
            "id": "rtb-014e0b311da280a2c",
            "owner_id": "010438509155",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Public-route_tabel-1"
            },
            "tags_all": {
              "Name": "Public-route_tabel-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-05f511cbf2fc448cb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010438509155:route-table/rtb-059d5d445a9242d0f",
            "id": "rtb-059d5d445a9242d0f",
            "owner_id": "010438509155",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Public-route_tabel-2"
            },
            "tags_all": {
              "Name": "Public-route_tabel-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-05f511cbf2fc448cb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010438509155:route-table/rtb-0cb1dc9205c47cfc1",
            "id": "rtb-0cb1dc9205c47cfc1",
            "owner_id": "010438509155",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private_subnets_route_tabel_1"
            },
            "tags_all": {
              "Name": "Private_subnets_route_tabel_1"
            },
            "timeouts": null,
            "vpc_id": "vpc-05f511cbf2fc448cb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010438509155:route-table/rtb-073155b038b80bb0e",
            "id": "rtb-073155b038b80bb0e",
            "owner_id": "010438509155",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private_subnets_route_tabel_2"
            },
            "tags_all": {
              "Name": "Private_subnets_route_tabel_2"
            },
            "timeouts": null,
            "vpc_id": "vpc-05f511cbf2fc448cb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01399278c26422355",
            "route_table_id": "rtb-0cb1dc9205c47cfc1",
            "subnet_id": "subnet-08b32f8ebcf129b25"
          },
          "dependencies": [
            "aws_route_table.private_subnet",
            "aws_subnet.private_subnet1",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0909472337073fb66",
            "route_table_id": "rtb-073155b038b80bb0e",
            "subnet_id": "subnet-0c78084b54123c961"
          },
          "dependencies": [
            "aws_route_table.private_subnet2",
            "aws_subnet.private_subnet2",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03083feb20c2f308e",
            "route_table_id": "rtb-014e0b311da280a2c",
            "subnet_id": "subnet-0fc060d22b92b30a5"
          },
          "dependencies": [
            "aws_route_table.main",
            "aws_subnet.public_subnet1",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-058d3ec3f1b6c67a6",
            "route_table_id": "rtb-059d5d445a9242d0f",
            "subnet_id": "subnet-0d6602b6bde65d33f"
          },
          "dependencies": [
            "aws_route_table.main2",
            "aws_subnet.public_subnet2",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010438509155:security-group/sg-046988f290de6b9d9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-046988f290de6b9d9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240831054604858900000005",
            "name_prefix": "terraform-",
            "owner_id": "010438509155",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "main-sg"
            },
            "tags_all": {
              "Name": "main-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05f511cbf2fc448cb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010438509155:subnet/subnet-08b32f8ebcf129b25",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b32f8ebcf129b25",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "010438509155",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet1"
            },
            "tags_all": {
              "Name": "private_subnet1"
            },
            "vpc_id": "vpc-05f511cbf2fc448cb"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010438509155:subnet/subnet-0c78084b54123c961",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c78084b54123c961",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "010438509155",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet2"
            },
            "tags_all": {
              "Name": "private_subnet2"
            },
            "vpc_id": "vpc-05f511cbf2fc448cb"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010438509155:subnet/subnet-0fc060d22b92b30a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc060d22b92b30a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "010438509155",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet"
            },
            "tags_all": {
              "Name": "public_subnet"
            },
            "vpc_id": "vpc-05f511cbf2fc448cb"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010438509155:subnet/subnet-0d6602b6bde65d33f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6602b6bde65d33f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "010438509155",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet2"
            },
            "tags_all": {
              "Name": "public_subnet2"
            },
            "vpc_id": "vpc-05f511cbf2fc448cb"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010438509155:vpc/vpc-05f511cbf2fc448cb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05979e716d842e158",
            "default_route_table_id": "rtb-048e85ddc8484fe7c",
            "default_security_group_id": "sg-018d8185b6ee3af6c",
            "dhcp_options_id": "dopt-00b3fa389bee76930",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05f511cbf2fc448cb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-048e85ddc8484fe7c",
            "owner_id": "010438509155",
            "tags": {
              "Name": "main_vpc"
            },
            "tags_all": {
              "Name": "main_vpc"
            }
          }
        }
      ]
    }
  ]
}